# osc

./: .gitignore  CMakeLists.txt  README.md
cmake/: oscConfig.cmake.in
osc/: CMakeLists.txt  common.cpp  common.hpp  constraint.hpp  contact.cpp  contact.hpp  cost.cpp  cost.hpp  default_formulation.cpp  default_formulation.hpp  dynamics.cpp  dynamics.hpp  holonomic.hpp  hosc.hpp  osc.cpp  osc.hpp  pid.hpp  program.hpp  qp_data.hpp  reference.hpp  se3.cpp  se3.hpp  task.cpp  task.hpp  trajectory_reference.cpp  trajectory_reference.hpp  wrench.hpp
osc/constraint/: linear.hpp
osc/contacts/: base.cpp  base.hpp  constraints.cpp  constraints.hpp  contact.cpp  contact.hpp  contact_3d.cpp  contact_3d.hpp
osc/solvers/: qpoases.cpp  qpoases.hpp
osc/tasks/: acceleration.hpp  actuation.hpp  base.hpp  centre_of_mass.cpp  centre_of_mass.hpp  costs.cpp  costs.hpp  force.hpp  frame.cpp  frame.hpp  joint_tracking.hpp  motion.cpp  motion.hpp  posture.cpp  posture.hpp  task.hpp
test/: CMakeLists.txt  cassie.urdf  contact.cpp  dynamics.cpp  osc.cpp  qpoases.cpp  task.cpp
